[gd_scene load_steps=7 format=3 uid="uid://bqi6mh1b1g43k"]

[ext_resource type="Script" path="res://scripts/level3.gd" id="1_3vcfu"]
[ext_resource type="Texture2D" uid="uid://dq8ip72buy4vr" path="res://assets/tastk_bar.png" id="4_txkty"]
[ext_resource type="FontFile" uid="uid://dkntq8a46w3jl" path="res://assets/fonts/early_gameboy/Early GameBoy.ttf" id="5_jkjsc"]
[ext_resource type="Script" path="res://scripts/text.gd" id="6_jrk7l"]
[ext_resource type="PackedScene" uid="uid://b77e2sp5ruhpi" path="res://actors/player.tscn" id="7_3r7d8"]
[ext_resource type="AudioStream" uid="uid://chvfg0abyakeh" path="res://assets/sfx&songs/battle_ost.wav" id="9_mbv51"]

[node name="level3" type="Node2D"]
script = ExtResource("1_3vcfu")

[node name="task_bar" type="Sprite2D" parent="."]
position = Vector2(80, 137)
scale = Vector2(1, 0.7)
texture = ExtResource("4_txkty")

[node name="score" type="Label" parent="."]
offset_left = 62.0
offset_top = 134.0
offset_right = 255.0
offset_bottom = 191.0
scale = Vector2(0.3, 0.297)
theme_override_fonts/font = ExtResource("5_jkjsc")
text = "scr:  "
script = ExtResource("6_jrk7l")

[node name="lives" type="Label" parent="."]
offset_left = 143.0
offset_top = 133.0
offset_right = 286.0
offset_bottom = 190.0
scale = Vector2(0.3, 0.297)
theme_override_fonts/font = ExtResource("5_jkjsc")
text = "<3"
script = ExtResource("6_jrk7l")

[node name="Player" parent="." instance=ExtResource("7_3r7d8")]
position = Vector2(19, 72)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(19, 72)
scale = Vector2(0.731204, 0.278042)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(80, 72)
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_mbv51")
autoplay = true
